# pg-tl-sfcc

./: .gitignore  CITATION.cff  MANIFEST.in  MODEL_CARD.md  README.md  pyproject.toml
docs/: xw_JGGE_suppl_material.docx
examples/: predict_sfcc_curve.py  predict_vg_parameters.py  run_gui.py  sample_curves.csv
models/: scaler_stats.json
pgtl_sfcc/: __init__.py  features.py  gui.py  inference.py  model.py  physics.py  scaler.py
tests/: test_inference_smoke.py  test_pitzer_coefficients.py
